make sure to align all of the columns in the pack details modal

--- a/src/ui/intro-page/PackDetails.scss
+++ b/src/ui/intro-page/PackDetails.scss
@@ -13,40 +13,62 @@
     }
   }
 
-  .counter {
-    display: flex;
-    padding: 10px 20px;
-    align-items: center;
+  table {
+    $horizontal-padding: 20px;
+    $vertical-padding: 10px;
 
-    &:hover:not(.disabled) {
-      cursor: pointer;
-      background-color: $green-light;
+    width: 100%;
 
-      svg {
-        opacity: 1;
+    .counter {
+      &:hover:not(.disabled) {
+        cursor: pointer;
+        background-color: $green-light;
 
-        path {
-          fill: $modal-button-hover;
+        svg {
+          opacity: 1;
+
+          path {
+            fill: $modal-button-hover;
+          }
         }
       }
-    }
 
-    .jp {
-      font-size: 32px;
-      margin-right: 20px;
-    }
+      td {
+        vertical-align: middle;
+      }
 
-    .name {
-      flex: 1;
-    }
+      .jp {
+        padding-left: $horizontal-padding;
+        font-size: 32px;
+        padding-right: 20px;
+        width: 1px;
+        white-space: nowrap;
+        text-align: center;
 
-    svg {
-      width: 32px;
-      height: 32px;
-      opacity: 0.65;
+        .Furigana {
+          display: inline-block;
+          margin-top: $vertical-padding;
+          margin-bottom: $vertical-padding;
+        }
+      }
 
-      path {
-        fill: $modal-button;
+      .name {
+        vertical-align: middle;
+      }
+
+      .button {
+        padding-right: $horizontal-padding;
+        width: 1px;
+
+        svg {
+          width: 32px;
+          height: 32px;
+          opacity: 0.65;
+
+          path {
+            fill: $modal-button;
+          }
+        }
       }
     }
   }
